# SERVORA_restaurent-order-management-api

./: .env  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4ec7bafedd8f_change_restaurent_phone_to_string.py  90c7f3be7edd_newer_tables_added.py  b4ae48087b8e_major_migrations.py  dea9e388e632_major_migrations.py  f7b2d1c4a9e0_add_order_items_and_created_at.py
src/core/: config.py  security.py
src/database/: session.py
src/dependencies/: auth.py
src/exceptions/: custom_exception.py
src/middleware/: auth_middleware.py  loggers.py
src/model/: OrderItems.py  __init__.py  cart.py  items.py  menu.py  order.py  restaurent.py  user.py
src/repository/: order.py  restaurent.py  user.py
src/routers/: auth.py  cart.py  items.py  menu.py  order.py  order_routers.py  restaurent.py  user.py
src/schema/: cart.py  items.py  menu.py  order.py  restaurent.py  user.py
src/service/: __init__.py  auth.py  cart.py  items.py  menu.py  order.py  order_service.py  restaurent.py  user.py  user_service.py
src/utils/: loggers.py
